--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="Disque_Vinyl.svg" type="image/x-icon">
 </head>
 <body>
+    <!-- Discography Quiz, Made by Augusto, Eduardo, Henrique & Mariane -->
     <div id="titleScreen">
         <h1 id="titleHeader">Hip-Hop Discography Quiz!</h1>
         <button id="start">Start</button>
